# AlgaDepa_Assesment

./: .gitignore  README.md  architecture.puml  classDiagram.puml
code/: .clang-format  CMakeLists.txt  artists.csv  common.cmake  compile_commands.json  graph.xml  grid.txt  valgrind.supp
code/.cache/clangd/index/: Downloader.h.BE4419876C18E473.idx  FileHandler.h.509F4CBCCD94C687.idx  FileLoader.h.651089BD1CC6A656.idx  GridParserStrategy.h.2184AB8497D45556.idx  ParseArtists.h.E2A61AD0A172143E.idx  ParseGrid.cpp.5FF02B14DCD46060.idx  ParseGrid.h.CAD51DE6BA9FFEA1.idx  artist.h.899954FAC4BDEE2E.idx  controller.h.7CD04E340D33A762.idx  iPerson.h.913AA8285014366E.idx  iTileState.h.DA70CAAD04D92689.idx  levelData.h.BAA819EFDA0F66BC.idx  main.cpp.633C9C89A44C8B74.idx  model.h.A5849F595DD3DDEA.idx  personFactory.h.76D7FB7BB2B72F45.idx  structs.h.B898112A08E9CFE9.idx  tile.h.9F02748F4C4A71B7.idx  tileEdge.h.8672C2FBADCFA8C2.idx  tileNode.h.8E2A43F008151236.idx  visitor.h.2229CC21C8C6E470.idx
code/inc/: Artist.h  ArtistCSVParser.h  ArtistParser.h  ArtistParserStrategy.h  CollisionHandler.h  Command.h  Configuration.h  Controller.h  FileHandler.h  FileLoader.h  GridParser.h  GridParserStrategy.h  IArtistParser.h  IFileLoader.h  IGridParser.h  ITileBehavior.h  ITileState.h  Input.h  InputStructs.h  LevelData.h  Memento.h  MementoManager.h  Model.h  ParseArtists.h  ParseGrid.h  PathFinder.h  PollingTUI.h  Quadtree.h  Renderer.h  Structs.h  Tile.h  TileFactory.h  TileNode.h  View.h  addArtistBehavior.h  artist.h  blueColor.h  configuration.h  controller.h  greenColor.h  (+32 more)
code/src/: Artist.cpp  ArtistParser.cpp  CollisionHandler.cpp  Controller.cpp  FileHandler.cpp  FileLoader.cpp  GridParserStrategy.cpp  Gridparser.cpp  IArtistParser.cpp  IFileLoader.cpp  IGridParser.cpp  ITileState.cpp  Input.cpp  InputStructs.cpp  LevelData.cpp  Main.cpp  Memento.cpp  MementoManager.cpp  Model.cpp  ParseGrid.cpp  Pathfinder.cpp  PollingTUI.cpp  Quadtree.cpp  Renderer.cpp  Tile.cpp  TileFactory.cpp  TileNode.cpp  View.cpp  addArtistBehavior.cpp  artist.cpp  blueColor.cpp  controller.cpp  greenColor.cpp  iTileState.cpp  infectTilesBehavior.cpp  killArtistBehavior.cpp  killArtistCommand.cpp  levelData.cpp  main.cpp  model.cpp  (+18 more)
code/tests/: CMakeLists.txt  temp.cpp  test_ITileBehavior.cpp
docs/: Rubric_Alga.xlsx  Rubrik_Depa.xlsx  architecture.puml  classDiagram.puml
